{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 40,
  "lineage": "fa9bd967-c2bd-33e3-e82c-2ada1417b769",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fbb95cfe953000b2",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-73-238-118.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.238.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-gill-hicks-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "public-gill-hicks-ap-northeast-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00799f66ce6c2a44b",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-3-114-49-231.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.114.49.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-gill-hicks-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "public-gill-hicks-ap-northeast-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:internet-gateway/igw-04ddcdf7d4c3b6009",
            "id": "igw-04ddcdf7d4c3b6009",
            "owner_id": "481161623260",
            "tags": {
              "Name": "terraform-eks"
            },
            "tags_all": {
              "Name": "terraform-eks"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbb95cfe953000b2",
            "id": "nat-04b63cb298c59678e",
            "network_interface_id": "eni-0fc60b74a91e47ebd",
            "private_ip": "10.1.1.161",
            "public_ip": "35.73.238.118",
            "subnet_id": "subnet-01897890e1338759e",
            "tags": {
              "Name": "Gateway NAT"
            },
            "tags_all": {
              "Name": "Gateway NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00799f66ce6c2a44b",
            "id": "nat-0d026265f245b225c",
            "network_interface_id": "eni-03d5c23a53249ddd3",
            "private_ip": "10.1.8.123",
            "public_ip": "3.114.49.231",
            "subnet_id": "subnet-003b9716dbd1cb5e8",
            "tags": {
              "Name": "Gateway NAT"
            },
            "tags_all": {
              "Name": "Gateway NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:route-table/rtb-088b0cd618f1d7b49",
            "id": "rtb-088b0cd618f1d7b49",
            "owner_id": "481161623260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b63cb298c59678e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "private-ap-northeast-1a"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.eks",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:route-table/rtb-0cff0a7aae99af24a",
            "id": "rtb-0cff0a7aae99af24a",
            "owner_id": "481161623260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d026265f245b225c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "private-ap-northeast-1c"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.eks",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:route-table/rtb-0769fe2968903d52e",
            "id": "rtb-0769fe2968903d52e",
            "owner_id": "481161623260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ddcdf7d4c3b6009",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf0a837fc911f24",
            "route_table_id": "rtb-088b0cd618f1d7b49",
            "subnet_id": "subnet-0d125f318f135c118"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.eks",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4bf840fcb501e3a",
            "route_table_id": "rtb-0cff0a7aae99af24a",
            "subnet_id": "subnet-099e2e102791e081f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.eks",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0465b5b755a64424b",
            "route_table_id": "rtb-0769fe2968903d52e",
            "subnet_id": "subnet-01897890e1338759e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01068734b1d71efcd",
            "route_table_id": "rtb-0769fe2968903d52e",
            "subnet_id": "subnet-003b9716dbd1cb5e8"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:security-group/sg-03d5bf0f7f340805c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d5bf0f7f340805c",
            "ingress": [
              {
                "cidr_blocks": [
                  "71.128.12.102/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02babadde64bbf797"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-master",
            "name_prefix": "",
            "owner_id": "481161623260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-gil-hicks"
            },
            "tags_all": {
              "Name": "eks-gil-hicks"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:security-group/sg-02babadde64bbf797",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02babadde64bbf797",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-eks-node",
            "name_prefix": "",
            "owner_id": "481161623260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/eks-gill-hicks": "owned"
            },
            "tags_all": {
              "Name": "terraform-eks-node",
              "kubernetes.io/cluster/eks-gill-hicks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-node-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-32987526",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03d5bf0f7f340805c",
            "self": false,
            "source_security_group_id": "sg-02babadde64bbf797",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.node",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "71.128.12.102/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2866665947",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03d5bf0f7f340805c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1104675463",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02babadde64bbf797",
            "self": false,
            "source_security_group_id": "sg-03d5bf0f7f340805c",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.node",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3838848620",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02babadde64bbf797",
            "self": false,
            "source_security_group_id": "sg-02babadde64bbf797",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:subnet/subnet-0d125f318f135c118",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.20.0/22",
            "id": "subnet-0d125f318f135c118",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481161623260",
            "tags": {
              "Name": "private-ap-northeast-1a",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "tags_all": {
              "Name": "private-ap-northeast-1a",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "dependencies": [
            "aws_vpc.eks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:subnet/subnet-099e2e102791e081f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.28.0/22",
            "id": "subnet-099e2e102791e081f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481161623260",
            "tags": {
              "Name": "private-ap-northeast-1c",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "tags_all": {
              "Name": "private-ap-northeast-1c",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:subnet/subnet-01897890e1338759e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.0.0/22",
            "id": "subnet-01897890e1338759e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481161623260",
            "tags": {
              "Name": "public-ap-northeast-1a",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "tags_all": {
              "Name": "public-ap-northeast-1a",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "dependencies": [
            "aws_vpc.eks"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:subnet/subnet-003b9716dbd1cb5e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.8.0/22",
            "id": "subnet-003b9716dbd1cb5e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481161623260",
            "tags": {
              "Name": "public-ap-northeast-1c",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "tags_all": {
              "Name": "public-ap-northeast-1c",
              "kubernetes.io/cluster/eks-gill-hicks": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "vpc_id": "vpc-01d2b08775360af9d"
          },
          "dependencies": [
            "aws_vpc.eks"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:481161623260:vpc/vpc-01d2b08775360af9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00bf98bfe2bc5beee",
            "default_route_table_id": "rtb-070b027fc88a0fe3c",
            "default_security_group_id": "sg-0248325b057948534",
            "dhcp_options_id": "dopt-08da3d37e58d6e4a5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01d2b08775360af9d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-070b027fc88a0fe3c",
            "owner_id": "481161623260",
            "tags": {
              "Name": "terraform-eks",
              "kubernetes.io/cluster/eks-gill-hicks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks",
              "kubernetes.io/cluster/eks-gill-hicks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}